--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,59 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+h1{
+  
+  box-sizing: border-box;
   color: white;
+  text-align: center;
+  
+}
+body{
+  font-family: 'montserrat',sans-serif;
+  background-color: black;
 }
 
-.App-link {
-  color: #61dafb;
+.searchbox{
+  display: block;
+  width: 80%;
+  padding: 20px;
+  margin: 40px 90px;
+  border: none;
+  outline: none;
+  background: none;
+  background-color: #83191d;
+  border-radius: 8px;
+  color: white;
+  font-size: 20px;
+  font-weight: 300;
+  transition: 0.4s ease-out;
+}
+.searchbox{
+  box-shadow: 0px 0px 25px 3px  rgb(209, 195, 198);
+}
+.hello{
+  width: 100%;
+}
+.films{
+  display: flex;
+  padding: 20px;
+  flex-wrap: wrap;
+  justify-content: space-between;
+ 
+}
+.img{
+
+  width: 400px;
+  height: 331px;
+  display: flex;
+  border-radius: 10px;
+}
+h5{
+  color: #83191d;
+  font-family:  URW Chancery L, cursive;
+  font-size: 28px;
+ 
+}
+span{
+  color: rgb(255, 255, 255);
+  margin: 80px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+
